# smart-agents

./: .env.example  .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.txt  test_agent.py
smart-agents/agents/: simple_agent.py
smart-agents/core/: agent.py  config.py  llm.py  message.py
smart_agents/: __init__.py  test_simple_agent.py
smart_agents/agents/: __init__.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
smart_agents/core/: __init__.py  agent.py  config.py  llm.py  message.py
smart_agents/memory/: base.py
smart_agents/memory/types/: working.py
smart_agents/tools/: __init__.py  async_executor.py  base.py  calculator.py  chain.py  registry.py  search.py
smart_agents/tools/builtin/: __init__.py  calculator.py  memory_tool.py  search.py  search_tool.py
smart_agents/utils/: __init__.py  logging.py
